--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 bOGnMCzEEeiTdA5yoE99Fg_6da6f2f02cc411e8b484f7e801bd0278_Bootstrap4-starter (1).zip
 node_modules
 progit - Shortcut.lnk
+front-end-web-ui-frameworks-and-tools-bootstrap4\week-1\Bootstrap4\conFusion
+front-end-web-ui-frameworks-and-tools-bootstrap4\week-1\Bootstrap4\conFusion\git-test
+front-end-web-ui-frameworks-and-tools-bootstrap4\week-1\Bootstrap4\conFusion\git-test-no2
